--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   ],
   "main": "./lib/printer",
   "dependencies": {
-    "nan": "^2.15.0",
+    "nan": "github:jkleinsc/nan#remove_accessor_signature",
     "prebuild-install": "^7.0.1"
   },
   "types": "types/index.d.ts"
